ansible/roles/media_stack/templates/lidarr/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: media
  labels:
    app: lidarr
spec:
  selector:
    app: lidarr
  ports:
    - name: http
      port: 8686
      targetPort: 8686
      nodePort: 32686
  type: NodePort
