ansible/roles/media_stack/templates/lidarr/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidarr
  namespace: media
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /media/lidarr
            pathType: Prefix
            backend:
              service:
                name: lidarr
                port:
                  number: 8686
